[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/enemy_display.gd" id="1"]
[ext_resource type="Shader" path="res://assets/shaders/damage_flash.gdshader" id="2"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("2")
shader_parameter/flash_intensity = 0.0

[node name="EnemyNode" type="VBoxContainer"]
custom_minimum_size = Vector2(160, 200)
material = SubResource("1")
script = ExtResource("1")

[node name="EnemyNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "Enemy Name"

[node name="HPBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 16)
max_value = 10.0
value = 10.0

[node name="HPLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "10 / 10"

[node name="IntentLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "ATK 5"

[node name="BlockLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = "Block: 0"
visible = false

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
text = ""
visible = false
